# devBlogger

./: devBlogger_AI.docx  specifications.txt  ~$vBlogger_AI.docx
devblogger/: .gitignore  README.md  debug_auth.py  devblogger.db  devblogger_config.sample  install.py  pyproject.toml  requirements.txt  run_devblogger.sh  test_auth.py  test_auth_flow.py  test_callback_server.py  test_gui_auth.py  test_gui_responsiveness.py
devblogger/src/: main.py
devblogger/src/ai/: base.py  gemini_client.py  manager.py  ollama_client.py  openai_client.py
devblogger/src/blog/: generator.py  manager.py  storage.py
devblogger/src/config/: database.py  settings.py
devblogger/src/github/: auth.py  client.py  models.py
devblogger/src/gui/: ai_config.py  blog_editor.py  commit_browser.py  login_dialog.py  main_window.py  repo_selector.py
devblogger/tests/: test_ai.py  test_blog.py  test_config.py
